--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,16 @@
 # Firebase Environment Variables
-# Copy this file to .env.local and fill in your Firebase project details
+# Get these values from your Firebase project settings > General > Your apps > Web app config
+# Create your own Firebase project at: https://console.firebase.google.com/
 
 NEXT_PUBLIC_FIREBASE_API_KEY=your_api_key_here
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your_project_id.firebaseapp.com
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=your_project_id
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your_project_id.appspot.com
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
-NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id
-NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=your_measurement_id
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your_project_id.firebasestorage.app
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_sender_id_here
+NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id_here
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=your_measurement_id_here
 
-# PayFast Configuration
-PAYFAST_MERCHANT_ID=your_payfast_merchant_id
-PAYFAST_MERCHANT_KEY=your_payfast_merchant_key
-PAYFAST_PASSPHRASE=your_payfast_passphrase
-PAYFAST_SANDBOX=true
+# Instructions:
+# 1. Copy this file to .env.local
+# 2. Replace all placeholder values with your actual Firebase config
+# 3. Make sure Firestore and Storage are enabled in your Firebase project
