--- a/.github/workflows/firebase-rules.yml
+++ b/.github/workflows/firebase-rules.yml
@@ -18,7 +18,10 @@ on:
 jobs:
   test-rules:
     runs-on: ubuntu-latest
-    name: Test Firebase Security Rules
+    strategy:
+      matrix:
+        component: [firestore:rules, storage:rules, firestore:indexes]
+    name: Validate ${{ matrix.component }}
     
     steps:
       - name: Checkout Code
@@ -40,15 +43,15 @@ jobs:
         run: |
           echo "Checking firebase.json configuration..."
           cat firebase.json
-          echo "Checking firestore.rules..."
-          head -10 firestore.rules
-          echo "Checking storage.rules..."
-          head -10 storage.rules
+          echo "Checking first lines of rules/indexes..."
+          if [ -f firestore.rules ]; then head -10 firestore.rules; fi
+          if [ -f storage.rules ]; then head -10 storage.rules; fi
+          if [ -f firestore.indexes.json ]; then head -10 firestore.indexes.json; fi
 
-      - name: Validate Firestore Rules Syntax
-        run: |
-          # Parse & validate rules without deploying
-          firebase deploy --only firestore:rules --project=${{ secrets.FIREBASE_PROJECT_ID || 'campus-marketplace-c7d92' }} --dry-run
+      - name: Validate ${{ matrix.component }}
+        run: firebase deploy --only ${{ matrix.component }} --project=campus-marketplace-c7d92 --dry-run
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
 
   deploy-rules:
     needs: test-rules
@@ -73,8 +76,7 @@ jobs:
         run: npm install -g firebase-tools
 
       - name: Deploy Firebase Rules
-        run: |
-          firebase deploy --only firestore:rules,storage:rules,firestore:indexes --project=${{ secrets.FIREBASE_PROJECT_ID || 'campus-marketplace-c7d92' }}
+        run: firebase deploy --only firestore:rules,storage:rules,firestore:indexes --project=campus-marketplace-c7d92
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
 
@@ -86,6 +88,8 @@ jobs:
     steps:
       - name: Success Notification
         run: |
-          echo "Firebase rules testing completed successfully!"
-          echo "Rules validation: ${{ needs.test-rules.result }}"
-          echo "Rules deployment: ${{ needs.deploy-rules.result || 'skipped (not on main/development branch)' }}"
+          echo "✅ Firebase components tested successfully in parallel!"
+          echo "Firestore rules: ${{ needs.test-rules.result }}"
+          echo "Storage rules: ${{ needs.test-rules.result }}"
+          echo "Firestore indexes: ${{ needs.test-rules.result }}"
+          echo "Deployment: ${{ needs.deploy-rules.result || 'skipped (not on main/development branch)' }}"
