--- a/.github/workflows/firebase-rules.yml
+++ b/.github/workflows/firebase-rules.yml
@@ -49,7 +49,7 @@ jobs:
           if [ -f firestore.indexes.json ]; then head -10 firestore.indexes.json; fi
 
       - name: Validate ${{ matrix.component }}
-        run: firebase deploy --only ${{ matrix.component }} --project=campus-marketplace-c7d92 --dry-run
+        run: firebase deploy --only ${{ matrix.component }} --dry-run
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
 
@@ -76,7 +76,7 @@ jobs:
         run: npm install -g firebase-tools
 
       - name: Deploy Firebase Rules
-        run: firebase deploy --only firestore:rules,storage:rules,firestore:indexes --project=campus-marketplace-c7d92
+        run: firebase deploy --only firestore:rules,storage:rules,firestore:indexes
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
 
