--- a/.github/workflows/firebase-rules.yml
+++ b/.github/workflows/firebase-rules.yml
@@ -5,14 +5,12 @@ on:
     branches: [ development, main ]
     paths: 
       - 'firestore.rules'
-      - 'storage.rules'
       - 'firestore.indexes.json'
       - '.github/workflows/firebase-rules.yml'
   pull_request:
     branches: [ development, main ]
     paths: 
       - 'firestore.rules'
-      - 'storage.rules'
       - 'firestore.indexes.json'
 
 jobs:
@@ -20,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        component: [firestore:rules, storage:rules, firestore:indexes]
+        component: [firestore:rules, firestore:indexes]
     name: Validate ${{ matrix.component }}
     
     steps:
@@ -45,7 +43,6 @@ jobs:
           cat firebase.json
           echo "Checking first lines of rules/indexes..."
           if [ -f firestore.rules ]; then head -10 firestore.rules; fi
-          if [ -f storage.rules ]; then head -10 storage.rules; fi
           if [ -f firestore.indexes.json ]; then head -10 firestore.indexes.json; fi
 
       - name: Validate ${{ matrix.component }}
@@ -76,7 +73,7 @@ jobs:
         run: npm install -g firebase-tools
 
       - name: Deploy Firebase Rules
-        run: firebase deploy --only firestore:rules,storage:rules,firestore:indexes
+        run: firebase deploy --only firestore:rules,firestore:indexes
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
 
@@ -88,8 +85,7 @@ jobs:
     steps:
       - name: Success Notification
         run: |
-          echo "✅ Firebase components tested successfully in parallel!"
+          echo "Firebase components tested successfully in parallel!"
           echo "Firestore rules: ${{ needs.test-rules.result }}"
-          echo "Storage rules: ${{ needs.test-rules.result }}"
           echo "Firestore indexes: ${{ needs.test-rules.result }}"
           echo "Deployment: ${{ needs.deploy-rules.result || 'skipped (not on main/development branch)' }}"
