--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -35,4 +35,4 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_CAMPUS_MARKET_PLACE_3F978 }}'
           projectId: campus-marketplace-c7d92
           channelId: development # This will be your persistent 'development' channel
-          expires: never # Set this channel to never expire if you want it to be permanent
+          expires: never # Set this channel to never expire if you want it to be permanent,
